@@ -3122,6 +3122,10 @@
 			RelativePath=".\NSClient++.manifest"
 			>
 		</File>
+		<File
+			RelativePath=".\scripts\test.lua"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
